# stumbler

./: .gitignore  API_INTEGRATION_STATUS.md  CORRECTED_IMPLEMENTATION.md  FINAL_SUMMARY.txt  FLOW.md  GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  QUICK_TEST.md  SUMMARY.txt  TESTING_GUIDE.md  TESTING_INSTRUCTIONS.md  WEBSOCKET_INTEGRATION.md  endpoints.md  idea.md  plan.md  specs.md  test_rabbit_hole.py  test_websocket_simple.py
backend/: TEST_WEBSOCKET.md  WEBSOCKET_SPEC.md  config.py  gemini.py  gemini_live.py  gemini_live_quickstart.py  live_ws_quickstart.py  main.py  pyproject.toml  rabbit_hole.py  test_websocket.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index copy.css  index.css
frontend/src/components/: MultimodalInputBox.tsx  StumbleBar.tsx  theme-toggle.tsx
frontend/src/components/rabbit/: ArticleCard.tsx  ArticleList.tsx  HeroSection.tsx  ScrollButton.tsx  ScrollingCarousel.tsx  SimpleCard.tsx
frontend/src/components/stumber/: AISummary.tsx  AIWhisper.tsx  ActionButton.tsx  CommunityPulse.tsx  DirectionSelector.tsx  ExpansionList.tsx  FocusMode.tsx  HeaderExpansion.tsx  HeroCard.tsx  LivePreview.tsx  ProgressBar.tsx  SavedNotification.tsx  SectionCard.tsx  StumberContent.tsx  StumberHeader.tsx  TagList.tsx  index.ts
frontend/src/data/: articles.ts  sampleWebsites.ts
frontend/src/lib/: api.ts  stumber-data.ts  stumber-types.ts  stumber-utils.ts
frontend/src/pages/: ArticleDetail.tsx  Home.tsx  HomePage.tsx  Stumble.tsx  enhanced-stumb.tsx  r2.tsx  rabbit.tsx  stumb.tsx  stumber.tsx  styles-showcase.tsx
